--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -346,6 +346,7 @@
     <ClCompile Include="Src\Util\DebuggerThread.cpp" />
     <ClCompile Include="Src\Util\ExtractAll.cpp" />
     <ClCompile Include="Src\Util\ImageUtil.cpp" />
+    <ClCompile Include="Src\Util\LipSyncutil.cpp" />
     <ClCompile Include="Src\Util\MidiPlayer.cpp" />
     <ClCompile Include="Src\Util\PerfTimer.cpp" />
     <ClCompile Include="Src\Util\PhonemeMap.cpp" />
@@ -534,6 +535,7 @@
     <ClInclude Include="Src\Util\DebuggerThread.h" />
     <ClInclude Include="Src\Util\ExtractAll.h" />
     <ClInclude Include="Src\Util\ImageUtil.h" />
+    <ClInclude Include="Src\Util\LipSyncUtil.h" />
     <ClInclude Include="Src\Util\MidiPlayer.h" />
     <ClInclude Include="Src\Util\PerfTimer.h" />
     <ClInclude Include="Src\Util\PhonemeMap.h" />
