- various bugs and progress toward lip sync support

--- a/SCICompanion/SCICompanion.vcxproj
+++ b/SCICompanion/SCICompanion.vcxproj
@@ -228,6 +228,7 @@ xcopy /S /Y /I /D "$(ProjectDir)Files\Objects" "$(OutDir)Objects"
     <None Include="Files\Objects\SCI0\Objects.sc" />
     <None Include="Files\Objects\SCI1.1\Methods.sc" />
     <None Include="Files\Objects\SCI1.1\Objects.sc" />
+    <None Include="Files\Samples\default_phoneme_map.ini" />
     <None Include="Files\Samples\SCI0\cursors\Arrow 1.bin" />
     <None Include="Files\Samples\SCI0\cursors\Arrow Small.bin" />
     <None Include="Files\Samples\SCI0\cursors\Arrow Up.bin" />
