--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1676,8 +1676,9 @@ BEGIN
     PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,426,73,66,14
     PUSHBUTTON      "n",IDC_BUTTON_RECORD,473,90,19,14
     COMBOBOX        IDC_COMBO_WAVEFORMAT,385,90,83,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Lip sync",IDC_BUTTONLIPSYNC,385,73,38,14
-    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,336,65,44,37
+    PUSHBUTTON      "Lip sync",IDC_BUTTONLIPSYNC,369,73,34,14
+    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,321,66,44,37
+    PUSHBUTTON      "Q",IDC_BUTTONLIPSYNC_DIALOG,405,73,17,14
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
@@ -1813,14 +1814,33 @@ BEGIN
     PUSHBUTTON      "ò",IDC_BUTTONDOWN,248,128,15,11
 END
 
-IDD_LIPSYNCDIALOG DIALOGEX 0, 0, 186, 62
+IDD_LIPSYNCDIALOG DIALOGEX 0, 0, 335, 231
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Extract lip sync information"
+CAPTION "Edit lip sync information"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Cancel",IDCANCEL,129,41,50,14
-    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,7,7,172,14
-    EDITTEXT        IDC_EDIT,7,23,172,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "Cancel",IDCANCEL,278,210,50,14
+    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,7,76,49,14
+    DEFPUSHBUTTON   "Accept",IDOK,223,210,50,14
+    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,7,7,50,43
+    PUSHBUTTON      "Generate lip sync data",ID_GENERATELIPSYNC,63,77,89,14
+    EDITTEXT        IDC_EDIT_SAMPLEBIT,63,55,88,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,63,7,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,83,7,19,14
+    CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,106,7,48,15
+    LTEXT           "Duration:",IDC_STATIC_DURATION,66,42,84,8
+    EDITTEXT        IDC_EDIT_WORDS,7,111,143,36,ES_MULTILINE | ES_READONLY
+    LTEXT           "Words:",IDC_STATIC_WORDS,7,98,24,8
+    CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,165,142,59
+    LTEXT           "Sync36 resource:",IDC_STATIC,7,153,57,8
+    LTEXT           "Talker mouth view:",IDC_STATIC_TALKER,169,8,77,8
+    EDITTEXT        IDC_EDIT_VIEW,249,7,25,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_LOOP,304,7,21,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Loop:",IDC_STATIC_LOOP,282,8,19,8
+    EDITTEXT        IDC_EDIT_PHONEMEMAP,168,39,160,135,ES_AUTOHSCROLL
+    LTEXT           "Phoneme to cel mapping:",IDC_STATIC_PHONEME,169,27,81,8
+    PUSHBUTTON      "Reset mapping",IDC_BUTTON_RESETMAPPING,261,24,67,14
+    EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,169,178,159,24,ES_AUTOHSCROLL | ES_READONLY
 END
 
 
@@ -2461,9 +2481,9 @@ BEGIN
     IDD_LIPSYNCDIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 179
+        RIGHTMARGIN, 328
         TOPMARGIN, 7
-        BOTTOMMARGIN, 55
+        BOTTOMMARGIN, 224
     END
 END
 #endif    // APSTUDIO_INVOKED
