--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1814,33 +1814,34 @@ BEGIN
     PUSHBUTTON      "ò",IDC_BUTTONDOWN,248,128,15,11
 END
 
-IDD_LIPSYNCDIALOG DIALOGEX 0, 0, 335, 231
+IDD_LIPSYNCDIALOG DIALOGEX 0, 0, 357, 250
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Edit lip sync information"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Cancel",IDCANCEL,278,210,50,14
-    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,7,76,49,14
-    DEFPUSHBUTTON   "Accept",IDOK,223,210,50,14
-    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,7,7,50,43
-    PUSHBUTTON      "Generate lip sync data",ID_GENERATELIPSYNC,63,77,89,14
-    EDITTEXT        IDC_EDIT_SAMPLEBIT,63,55,88,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,63,7,19,14
-    PUSHBUTTON      "g",IDC_BUTTON_STOP,83,7,19,14
-    CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,106,7,48,15
-    LTEXT           "Duration:",IDC_STATIC_DURATION,66,42,84,8
-    EDITTEXT        IDC_EDIT_WORDS,7,111,143,36,ES_MULTILINE | ES_READONLY
-    LTEXT           "Words:",IDC_STATIC_WORDS,7,98,24,8
-    CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,165,142,59
-    LTEXT           "Sync36 resource:",IDC_STATIC,7,153,57,8
-    LTEXT           "Talker mouth view:",IDC_STATIC_TALKER,169,8,77,8
-    EDITTEXT        IDC_EDIT_VIEW,249,7,25,12,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_EDIT_LOOP,304,7,21,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Loop:",IDC_STATIC_LOOP,282,8,19,8
-    EDITTEXT        IDC_EDIT_PHONEMEMAP,168,39,160,135,ES_AUTOHSCROLL
-    LTEXT           "Phoneme to cel mapping:",IDC_STATIC_PHONEME,169,27,81,8
-    PUSHBUTTON      "Reset mapping",IDC_BUTTON_RESETMAPPING,261,24,67,14
-    EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,169,178,159,24,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "Cancel",IDCANCEL,300,229,50,14
+    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,63,185,69,14
+    DEFPUSHBUTTON   "Accept",IDOK,239,229,50,14
+    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,71,73,54,47
+    PUSHBUTTON      "Generate lip sync data",ID_GENERATELIPSYNC,7,177,47,24,BS_MULTILINE
+    EDITTEXT        IDC_EDIT_SAMPLEBIT,7,152,123,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,7,57,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,30,57,19,14
+    LTEXT           "Duration:",IDC_STATIC_DURATION,7,138,84,8
+    EDITTEXT        IDC_EDIT_WORDS,7,221,126,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
+    LTEXT           "Word guesses:",IDC_STATIC_WORDS,8,209,49,8
+    CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,136,89,93,154
+    LTEXT           "Sync36 resource:",IDC_STATIC,138,76,57,8
+    RTEXT           "Talker mouth view:",IDC_STATIC_TALKER,65,60,88,8
+    EDITTEXT        IDC_EDIT_VIEW,160,57,25,12,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_LOOP,212,57,21,12,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Loop:",IDC_STATIC_LOOP,190,59,19,8
+    EDITTEXT        IDC_EDIT_PHONEMEMAP,238,69,112,119,ES_AUTOHSCROLL
+    LTEXT           "Phoneme to cel mapping:",IDC_STATIC_PHONEME,239,57,81,8
+    PUSHBUTTON      "Reset mapping",IDC_BUTTON_RESETMAPPING,329,54,21,14
+    EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,238,196,112,24,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
+    CONTROL         "",IDC_WAVEFORM,"Static",SS_OWNERDRAW,7,7,343,47
+    CONTROL         "&Half speed",IDC_CHECK_HALFSPEED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,77,52,10
 END
 
 
@@ -2481,9 +2482,9 @@ BEGIN
     IDD_LIPSYNCDIALOG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 328
+        RIGHTMARGIN, 350
         TOPMARGIN, 7
-        BOTTOMMARGIN, 224
+        BOTTOMMARGIN, 243
     END
 END
 #endif    // APSTUDIO_INVOKED
