- proper loading/saving of phoneme maps

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1814,34 +1814,35 @@ BEGIN
     PUSHBUTTON      "ò",IDC_BUTTONDOWN,248,128,15,11
 END
 
-IDD_LIPSYNCDIALOG DIALOGEX 0, 0, 357, 250
+IDD_LIPSYNCDIALOG DIALOGEX 0, 0, 357, 263
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Edit lip sync information"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Cancel",IDCANCEL,300,229,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,300,242,50,14
     CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,63,185,69,14
-    DEFPUSHBUTTON   "Accept",IDOK,239,229,50,14
+    DEFPUSHBUTTON   "Accept",IDOK,239,242,50,14
     CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,71,73,54,47
-    PUSHBUTTON      "Generate lip sync data",ID_GENERATELIPSYNC,7,177,47,24,BS_MULTILINE
+    PUSHBUTTON      "Regenerate lip-sync",ID_GENERATELIPSYNC,7,177,47,24,BS_MULTILINE
     EDITTEXT        IDC_EDIT_SAMPLEBIT,7,152,123,14,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "8",IDC_BUTTON_PLAY2,7,57,19,14
     PUSHBUTTON      "g",IDC_BUTTON_STOP,30,57,19,14
     LTEXT           "Duration:",IDC_STATIC_DURATION,7,138,84,8
-    EDITTEXT        IDC_EDIT_WORDS,7,221,126,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDIT_WORDS,7,234,126,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
     LTEXT           "Word guesses:",IDC_STATIC_WORDS,8,209,49,8
-    CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,136,89,93,154
-    LTEXT           "Sync36 resource:",IDC_STATIC,138,76,57,8
+    CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,136,89,93,167
+    LTEXT           "Sync36 resource:",IDC_STATIC_SYNC36,138,76,57,8
     RTEXT           "Talker mouth view:",IDC_STATIC_TALKER,65,60,88,8
     EDITTEXT        IDC_EDIT_VIEW,160,57,25,12,ES_AUTOHSCROLL | ES_NUMBER
     EDITTEXT        IDC_EDIT_LOOP,212,57,21,12,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "Loop:",IDC_STATIC_LOOP,190,59,19,8
-    EDITTEXT        IDC_EDIT_PHONEMEMAP,238,69,112,119,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_PHONEMEMAP,238,69,112,109,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | WS_VSCROLL
     LTEXT           "Phoneme to cel mapping:",IDC_STATIC_PHONEME,239,57,81,8
-    PUSHBUTTON      "Reset mapping",IDC_BUTTON_RESETMAPPING,329,54,21,14
-    EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,238,196,112,24,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
+    PUSHBUTTON      "&Reset",IDC_BUTTON_RESETMAPPING,311,180,39,14
+    EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,238,196,112,41,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
     CONTROL         "",IDC_WAVEFORM,"Static",SS_OWNERDRAW,7,7,343,47
     CONTROL         "&Half speed",IDC_CHECK_HALFSPEED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,77,52,10
+    PUSHBUTTON      "&Commit phonemes",IDC_BUTTON_COMMITMAPPING,238,180,69,14
 END
 
 
@@ -2484,7 +2485,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 350
         TOPMARGIN, 7
-        BOTTOMMARGIN, 243
+        BOTTOMMARGIN, 256
     END
 END
 #endif    // APSTUDIO_INVOKED
