- improvements to lip sync dialog

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1820,29 +1820,46 @@ CAPTION "Edit lip sync information"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     PUSHBUTTON      "Cancel",IDCANCEL,300,242,50,14
-    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,63,185,69,14
+    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,16,197,112,14
     DEFPUSHBUTTON   "Accept",IDOK,239,242,50,14
-    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,71,73,54,47
-    PUSHBUTTON      "Regenerate lip-sync",ID_GENERATELIPSYNC,7,177,47,24,BS_MULTILINE
-    EDITTEXT        IDC_EDIT_SAMPLEBIT,7,152,123,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,7,57,19,14
-    PUSHBUTTON      "g",IDC_BUTTON_STOP,30,57,19,14
-    LTEXT           "Duration:",IDC_STATIC_DURATION,7,138,84,8
-    EDITTEXT        IDC_EDIT_WORDS,7,234,126,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
-    LTEXT           "Word guesses:",IDC_STATIC_WORDS,8,209,49,8
-    CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,136,89,93,167
-    LTEXT           "Sync36 resource:",IDC_STATIC_SYNC36,138,76,57,8
-    RTEXT           "Talker mouth view:",IDC_STATIC_TALKER,65,60,88,8
-    EDITTEXT        IDC_EDIT_VIEW,160,57,25,12,ES_AUTOHSCROLL | ES_NUMBER
-    EDITTEXT        IDC_EDIT_LOOP,212,57,21,12,ES_AUTOHSCROLL | ES_NUMBER
-    LTEXT           "Loop:",IDC_STATIC_LOOP,190,59,19,8
-    EDITTEXT        IDC_EDIT_PHONEMEMAP,238,69,112,109,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | WS_VSCROLL
-    LTEXT           "Phoneme to cel mapping:",IDC_STATIC_PHONEME,239,57,81,8
-    PUSHBUTTON      "&Reset",IDC_BUTTON_RESETMAPPING,311,180,39,14
-    EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,238,196,112,41,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
+    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,90,64,56,50
+    PUSHBUTTON      "Regenerate Lip-sync Data",ID_GENERATELIPSYNC,15,174,112,17,BS_MULTILINE
+    EDITTEXT        IDC_EDIT_SAMPLEBIT,15,152,111,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "8",IDC_BUTTON_PLAY2,155,57,19,14
+    PUSHBUTTON      "g",IDC_BUTTON_STOP,182,57,19,14
+    LTEXT           "Duration:",IDC_STATIC_DURATION,16,138,75,8
+    EDITTEXT        IDC_EDIT_WORDS,15,227,115,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
+    LTEXT           "Word guesses:",IDC_STATIC_WORDS,19,215,49,8
+    CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,136,149,75,100
+    LTEXT           "Current lip-sync resource:",IDC_STATIC_SYNC36,137,134,53,8
+    RTEXT           "Talker mouth view:",IDC_STATIC_TALKER,14,85,65,13
+    EDITTEXT        IDC_EDIT_PHONEMEMAP,228,84,115,94,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | WS_VSCROLL
+    LTEXT           "Phoneme to cel mapping:",IDC_STATIC_PHONEME,231,71,96,8
+    PUSHBUTTON      "&Reset",IDC_BUTTON_RESETMAPPING,301,180,41,14
+    EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,228,196,115,36,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
     CONTROL         "",IDC_WAVEFORM,"Static",SS_OWNERDRAW,7,7,343,47
-    CONTROL         "&Half speed",IDC_CHECK_HALFSPEED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,11,77,52,10
-    PUSHBUTTON      "&Commit phonemes",IDC_BUTTON_COMMITMAPPING,238,180,69,14
+    CONTROL         "&Half speed",IDC_CHECK_HALFSPEED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,156,83,52,10
+    PUSHBUTTON      "Commit &Phonemes",IDC_BUTTON_COMMITMAPPING,228,180,69,14
+    PUSHBUTTON      "Set &View",IDC_BUTTON_SETVIEW,19,66,59,14
+    CONTROL         "Use &Sample",IDC_CHECK_USESAMPLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,23,101,52,10
+    GROUPBOX        "View/Loop 0/0",IDC_GROUP_VIEWLOOP,221,59,129,177
+    GROUPBOX        "Message: N V C S",IDC_GROUP_MESSAGE,7,123,209,133
+    GROUPBOX        "Static",IDC_GROUP_TALKER,7,55,145,65
+    PUSHBUTTON      "Delete",IDC_BUTTON_DELETE_SYNC,192,131,18,14,BS_ICON
+END
+
+IDD_VIEWLOOP DIALOGEX 0, 0, 131, 93
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Choose view/loop"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    CONTROL         "Loop:",IDC_STATIC2,"Static",SS_SIMPLE | SS_CENTERIMAGE | WS_GROUP,9,59,39,10,WS_EX_RIGHT
+    EDITTEXT        IDC_EDITLOOP,56,56,68,14,ES_AUTOHSCROLL | ES_NUMBER
+    DEFPUSHBUTTON   "OK",IDOK,7,72,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,72,72,52,14
+    CONTROL         "View:",IDC_STATIC1,"Static",SS_SIMPLE | SS_CENTERIMAGE | WS_GROUP,9,38,39,10,WS_EX_RIGHT
+    EDITTEXT        IDC_EDITVIEW,56,35,68,14,ES_AUTOHSCROLL | ES_NUMBER
+    LTEXT           "Choose a view and loop for this talker's mouth.",IDC_STATIC3,7,7,117,19
 END
 
 
@@ -2486,6 +2503,15 @@ BEGIN
         RIGHTMARGIN, 350
         TOPMARGIN, 7
         BOTTOMMARGIN, 256
+    END
+
+    IDD_VIEWLOOP, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 124
+        VERTGUIDE, 56
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 86
     END
 END
 #endif    // APSTUDIO_INVOKED
