--- a/SCICompanionLib/SCICompanionLib.vcxproj
+++ b/SCICompanionLib/SCICompanionLib.vcxproj
@@ -212,6 +212,7 @@
     <ClCompile Include="Src\Compile\TarjanAlgorithm.cpp" />
     <ClCompile Include="Src\Dialogs\BitmapToVGADialog.cpp" />
     <ClCompile Include="Src\Dialogs\ChooseColorDialogVGA.cpp" />
+    <ClCompile Include="Src\Dialogs\ChooseTalkerViewLoopDialog.cpp" />
     <ClCompile Include="Src\Dialogs\ColorAdjustDialog.cpp" />
     <ClCompile Include="Src\Dialogs\ColorShifterDialog.cpp" />
     <ClCompile Include="Src\Dialogs\ConvertFromToPaletteDialog.cpp" />
@@ -277,6 +278,7 @@
     <ClInclude Include="Src\Compile\DecompilerResults.h" />
     <ClInclude Include="Src\Compile\NodeTypes.h" />
     <ClInclude Include="Src\cpptoml\cpptoml.h" />
+    <ClInclude Include="Src\Dialogs\ChooseTalkerViewLoopDialog.h" />
     <ClInclude Include="Src\Dialogs\ColorAdjustDialog.h" />
     <ClInclude Include="Src\Dialogs\ColorShiftCallback.h" />
     <ClInclude Include="Src\Dialogs\ColorShifterDialog.h" />
