--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1679,6 +1679,7 @@ BEGIN
     PUSHBUTTON      "Lip sync",IDC_BUTTONLIPSYNC,369,73,34,14
     CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,321,66,44,37
     PUSHBUTTON      "Q",IDC_BUTTONLIPSYNC_DIALOG,405,73,17,14
+    LTEXT           "Static",IDC_STATIC_BASE36NAME,322,10,55,8
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
@@ -1819,33 +1820,34 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Edit lip sync information"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    PUSHBUTTON      "Cancel",IDCANCEL,300,242,50,14
-    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,16,197,112,14
     DEFPUSHBUTTON   "Accept",IDOK,239,242,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,300,242,50,14
+    CONTROL         "",IDC_WAVEFORM,"Static",SS_OWNERDRAW,7,7,343,47
+    PUSHBUTTON      "Set &View",IDC_BUTTON_SETVIEW,19,90,59,14
     CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,90,64,56,50
-    PUSHBUTTON      "Regenerate Lip-sync Data",ID_GENERATELIPSYNC,15,174,112,17,BS_MULTILINE
+    RTEXT           "Talker mouth view:",IDC_STATIC_TALKER,13,68,65,20
+    CONTROL         "Use &Sample",IDC_CHECK_USESAMPLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,23,107,52,10
+    GROUPBOX        "Static",IDC_GROUP_TALKER,7,55,145,65
+    LTEXT           "Duration:",IDC_STATIC_DURATION,16,138,75,8
+    PUSHBUTTON      "Raw",IDC_BUTTON_RAW,108,131,20,14,BS_ICON
+    LTEXT           "Current lip-sync resource:",IDC_STATIC_SYNC36,137,134,53,8
+    PUSHBUTTON      "Delete",IDC_BUTTON_DELETE_SYNC,192,131,18,14,BS_ICON
     EDITTEXT        IDC_EDIT_SAMPLEBIT,15,152,111,14,ES_AUTOHSCROLL | ES_READONLY
+    PUSHBUTTON      "Regenerate Lip-sync Data",ID_GENERATELIPSYNC,15,174,112,17,BS_MULTILINE
+    CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,16,197,112,14
+    LTEXT           "Word guesses:",IDC_STATIC_WORDS,19,215,49,8
+    EDITTEXT        IDC_EDIT_WORDS,15,227,115,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
+    CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,136,149,75,100
+    GROUPBOX        "Message: N V C S",IDC_GROUP_MESSAGE,7,123,209,133
     PUSHBUTTON      "8",IDC_BUTTON_PLAY2,155,57,19,14
     PUSHBUTTON      "g",IDC_BUTTON_STOP,182,57,19,14
-    LTEXT           "Duration:",IDC_STATIC_DURATION,16,138,75,8
-    EDITTEXT        IDC_EDIT_WORDS,15,227,115,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
-    LTEXT           "Word guesses:",IDC_STATIC_WORDS,19,215,49,8
-    CONTROL         "",IDC_LIST_SYNCRESOURCE,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,136,149,75,100
-    LTEXT           "Current lip-sync resource:",IDC_STATIC_SYNC36,137,134,53,8
-    RTEXT           "Talker mouth view:",IDC_STATIC_TALKER,14,85,65,13
-    EDITTEXT        IDC_EDIT_PHONEMEMAP,228,84,115,94,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | WS_VSCROLL
+    CONTROL         "&Half speed",IDC_CHECK_HALFSPEED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,156,83,52,10
     LTEXT           "Phoneme to cel mapping:",IDC_STATIC_PHONEME,231,71,96,8
+    EDITTEXT        IDC_EDIT_PHONEMEMAP,228,84,115,94,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | WS_VSCROLL
+    PUSHBUTTON      "Commit &Phonemes",IDC_BUTTON_COMMITMAPPING,228,180,69,14
     PUSHBUTTON      "&Reset",IDC_BUTTON_RESETMAPPING,301,180,41,14
     EDITTEXT        IDC_EDIT_PHONEMEMAPSTATUS,228,196,115,36,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY | WS_VSCROLL
-    CONTROL         "",IDC_WAVEFORM,"Static",SS_OWNERDRAW,7,7,343,47
-    CONTROL         "&Half speed",IDC_CHECK_HALFSPEED,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,156,83,52,10
-    PUSHBUTTON      "Commit &Phonemes",IDC_BUTTON_COMMITMAPPING,228,180,69,14
-    PUSHBUTTON      "Set &View",IDC_BUTTON_SETVIEW,19,66,59,14
-    CONTROL         "Use &Sample",IDC_CHECK_USESAMPLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,23,101,52,10
     GROUPBOX        "View/Loop 0/0",IDC_GROUP_VIEWLOOP,221,59,129,177
-    GROUPBOX        "Message: N V C S",IDC_GROUP_MESSAGE,7,123,209,133
-    GROUPBOX        "Static",IDC_GROUP_TALKER,7,55,145,65
-    PUSHBUTTON      "Delete",IDC_BUTTON_DELETE_SYNC,192,131,18,14,BS_ICON
 END
 
 IDD_VIEWLOOP DIALOGEX 0, 0, 131, 93
