--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1667,19 +1667,20 @@ BEGIN
     LTEXT           "Message text:",IDC_STATIC2,172,11,47,8
     PUSHBUTTON      "Commit",IDC_BUTTONCOMMIT,232,7,50,14
     PUSHBUTTON      "Add new",IDC_BUTTONADDNEW,7,7,42,14
-    EDITTEXT        IDC_EDIT_SAMPLEBIT,383,55,109,14,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_EDIT_SAMPLEBIT,383,75,109,14,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "8",IDC_BUTTON_PLAY2,383,7,19,14
     PUSHBUTTON      "g",IDC_BUTTON_STOP,403,7,19,14
-    CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,426,7,66,15
-    CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,430,26,54,10
-    LTEXT           "Duration:",IDC_STATIC_DURATION,386,42,106,8
-    PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,426,73,66,14
-    PUSHBUTTON      "n",IDC_BUTTON_RECORD,473,90,19,14
-    COMBOBOX        IDC_COMBO_WAVEFORMAT,385,90,83,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Lip sync",IDC_BUTTONLIPSYNC,369,73,34,14
-    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,321,66,44,37
-    PUSHBUTTON      "Q",IDC_BUTTONLIPSYNC_DIALOG,405,73,17,14
+    CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,442,48,50,15
+    CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,384,49,54,10
+    LTEXT           "Duration:",IDC_STATIC_DURATION,386,63,106,8
+    PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,426,90,66,14
+    PUSHBUTTON      "n",IDC_BUTTON_RECORD,425,7,19,14
+    COMBOBOX        IDC_COMBO_WAVEFORMAT,413,25,79,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Quick Lip Sync",IDC_BUTTONLIPSYNC,321,26,55,14
+    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,321,66,55,38
+    PUSHBUTTON      "Advanced",IDC_BUTTONLIPSYNC_DIALOG,321,44,55,14
     LTEXT           "Static",IDC_STATIC_BASE36NAME,322,10,55,8
+    RTEXT           "Rec:",IDC_STATIC_REC,389,27,16,8
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
@@ -2426,6 +2427,8 @@ BEGIN
         VERTGUIDE, 49
         VERTGUIDE, 58
         VERTGUIDE, 163
+        VERTGUIDE, 321
+        VERTGUIDE, 376
         TOPMARGIN, 7
         BOTTOMMARGIN, 111
     END
