- support for exporting wave - remove global for audio playback - better updates after add/remove sync component

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1673,7 +1673,7 @@ BEGIN
     CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,442,48,50,15
     CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,384,49,54,10
     LTEXT           "Duration:",IDC_STATIC_DURATION,386,63,106,8
-    PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,426,90,66,14
+    PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,431,90,61,14
     PUSHBUTTON      "n",IDC_BUTTON_RECORD,425,7,19,14
     COMBOBOX        IDC_COMBO_WAVEFORMAT,413,25,79,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Quick Lip Sync",IDC_BUTTONLIPSYNC,321,26,55,14
@@ -1681,6 +1681,7 @@ BEGIN
     PUSHBUTTON      "Advanced",IDC_BUTTONLIPSYNC_DIALOG,321,44,55,14
     LTEXT           "Static",IDC_STATIC_BASE36NAME,322,10,55,8
     RTEXT           "Rec:",IDC_STATIC_REC,389,27,16,8
+    PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,384,90,44,14
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
@@ -1745,6 +1746,7 @@ BEGIN
     LTEXT           "Audio resources are short wav-based resources used for sound effects.",IDC_STATICTITLE,7,7,139,22
     PUSHBUTTON      "n",IDC_BUTTON_RECORD,95,180,19,14
     COMBOBOX        IDC_COMBO_WAVEFORMAT,7,181,83,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,79,162,35,14
 END
 
 IDD_CONVERTTOPALETTE DIALOGEX 0, 0, 151, 69
@@ -1834,7 +1836,7 @@ BEGIN
     LTEXT           "Current lip-sync resource:",IDC_STATIC_SYNC36,137,134,53,8
     PUSHBUTTON      "Delete",IDC_BUTTON_DELETE_SYNC,192,131,18,14,BS_ICON
     EDITTEXT        IDC_EDIT_SAMPLEBIT,15,152,111,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "Regenerate Lip-sync Data",ID_GENERATELIPSYNC,15,174,112,17,BS_MULTILINE
+    PUSHBUTTON      "Generate Lip-sync Data",ID_GENERATELIPSYNC,15,174,112,17,BS_MULTILINE
     CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,16,197,112,14
     LTEXT           "Word guesses:",IDC_STATIC_WORDS,19,215,49,8
     EDITTEXT        IDC_EDIT_WORDS,15,227,115,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
