- support text-based lip sync

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1676,12 +1676,13 @@ BEGIN
     PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,431,90,61,14
     PUSHBUTTON      "n",IDC_BUTTON_RECORD,425,7,19,14
     COMBOBOX        IDC_COMBO_WAVEFORMAT,413,25,79,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Quick Lip Sync",IDC_BUTTONLIPSYNC,321,26,55,14
-    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,321,66,55,38
-    PUSHBUTTON      "Advanced",IDC_BUTTONLIPSYNC_DIALOG,321,44,55,14
+    PUSHBUTTON      "Quick Lip Sync",IDC_BUTTONLIPSYNC,321,24,55,14
+    CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,321,67,55,38
+    PUSHBUTTON      "Advanced",IDC_BUTTONLIPSYNC_DIALOG,321,52,55,14
     LTEXT           "Static",IDC_STATIC_BASE36NAME,322,10,55,8
     RTEXT           "Rec:",IDC_STATIC_REC,389,27,16,8
     PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,384,90,44,14
+    CONTROL         "Textless",IDC_CHECK_TEXTLESS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,321,41,55,10
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
@@ -1836,7 +1837,8 @@ BEGIN
     LTEXT           "Current lip-sync resource:",IDC_STATIC_SYNC36,137,134,53,8
     PUSHBUTTON      "Delete",IDC_BUTTON_DELETE_SYNC,192,131,18,14,BS_ICON
     EDITTEXT        IDC_EDIT_SAMPLEBIT,15,152,111,14,ES_AUTOHSCROLL | ES_READONLY
-    PUSHBUTTON      "Generate Lip-sync Data",ID_GENERATELIPSYNC,15,174,112,17,BS_MULTILINE
+    PUSHBUTTON      "Generate Lip-sync Data",ID_GENERATELIPSYNC,15,170,53,23,BS_MULTILINE
+    CONTROL         "Textless",IDC_CHECK_TEXTLESS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,73,178,52,10
     CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,16,197,112,14
     LTEXT           "Word guesses:",IDC_STATIC_WORDS,19,215,49,8
     EDITTEXT        IDC_EDIT_WORDS,15,227,115,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
