- first stab at level meter.

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1683,6 +1683,7 @@ BEGIN
     RTEXT           "Rec:",IDC_STATIC_REC,389,27,16,8
     PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,384,90,44,14
     CONTROL         "Textless",IDC_CHECK_TEXTLESS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,321,41,55,10
+    CONTROL         "",IDC_LEVELMETER,"Static",SS_OWNERDRAW,450,7,42,14
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
