- 16 bit audio monitoring - fix up UI a bit

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -111,6 +111,8 @@ IDI_PIC                 ICON                    "res\\pic.ico"
 IDI_SHOWTRACEIMAGE      ICON                    "res\\showtrace.ico"
 IDI_LOADTRACEIMAGE      ICON                    "res\\loadtrace.ico"
 IDI_DELETE              ICON                    "res\\delete.ico"
+IDI_RECORD              ICON                    "res\\record.ico"
+IDI_MONITOR             ICON                    "res\\headphones.ico"
 IDI_EDIT_FIND           ICON                    "res\\find.ico"
 IDI_EDITPALETTE         ICON                    "res\\editpalette.ico"
 IDI_ANIMATE             ICON                    "res\\animate.ico"
@@ -1621,15 +1623,17 @@ IDD_MESSAGETOOLBOX DIALOGEX 0, 0, 117, 277
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_CLIPCHILDREN | WS_SYSMENU
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    LTEXT           "Global verbs:",IDC_STATIC1,7,27,43,11
+    LTEXT           "Global verbs:",IDC_STATIC1,7,44,43,11
     LTEXT           "Global talkers:",IDC_STATIC2,7,157,45,11
-    CONTROL         "",IDC_LISTVERBS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,41,103,104
+    CONTROL         "",IDC_LISTVERBS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,58,103,87
     CONTROL         "",IDC_LISTTALKERS,"SysListView32",LVS_REPORT | LVS_EDITLABELS | LVS_ALIGNLEFT | LVS_NOCOLUMNHEADER | WS_BORDER | WS_TABSTOP,7,170,103,100
-    PUSHBUTTON      "Add new",IDC_BUTTONADDVERB,54,23,35,14
+    PUSHBUTTON      "Add new",IDC_BUTTONADDVERB,54,40,35,14
     PUSHBUTTON      "Add new",IDC_BUTTONADDTALKER,54,154,35,14
-    PUSHBUTTON      "Script",IDC_GOTOSCRIPT,47,7,63,14,BS_RIGHT
-    PUSHBUTTON      "Delete",IDC_BUTTONDELETEVERB,92,23,18,14,BS_ICON
+    PUSHBUTTON      "Script",IDC_GOTOSCRIPT,47,24,63,14,BS_RIGHT
+    PUSHBUTTON      "Delete",IDC_BUTTONDELETEVERB,92,40,18,14,BS_ICON
     PUSHBUTTON      "Delete",IDC_BUTTONDELETETALKER,92,154,18,14,BS_ICON
+    CONTROL         "",IDC_LEVELMETER,"Static",SS_OWNERDRAW,46,7,64,14
+    CONTROL         "Monitor",IDC_CHECK_MONITOR,"Button",BS_AUTOCHECKBOX | BS_ICON | BS_PUSHLIKE | WS_TABSTOP,20,7,19,15
 END
 
 IDD_MESSAGEHELPER DIALOGEX 0, 0, 117, 277
@@ -1674,16 +1678,15 @@ BEGIN
     CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,384,49,54,10
     LTEXT           "Duration:",IDC_STATIC_DURATION,386,63,106,8
     PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,431,90,61,14
-    PUSHBUTTON      "n",IDC_BUTTON_RECORD,425,7,19,14
-    COMBOBOX        IDC_COMBO_WAVEFORMAT,413,25,79,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "Record",IDC_BUTTON_RECORD,403,24,19,14,BS_ICON
+    COMBOBOX        IDC_COMBO_WAVEFORMAT,426,25,66,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Quick Lip Sync",IDC_BUTTONLIPSYNC,321,24,55,14
     CONTROL         "",IDC_ANIMATE,"Static",SS_OWNERDRAW,321,67,55,38
     PUSHBUTTON      "Advanced",IDC_BUTTONLIPSYNC_DIALOG,321,52,55,14
     LTEXT           "Static",IDC_STATIC_BASE36NAME,322,10,55,8
-    RTEXT           "Rec:",IDC_STATIC_REC,389,27,16,8
+    RTEXT           "Recording format:",IDC_STATIC_REC,427,11,59,8
     PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,384,90,44,14
     CONTROL         "Textless",IDC_CHECK_TEXTLESS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,321,41,55,10
-    CONTROL         "",IDC_LEVELMETER,"Static",SS_OWNERDRAW,450,7,42,14
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
@@ -1746,7 +1749,7 @@ BEGIN
     EDITTEXT        IDC_EDIT_DESCRIPTION,7,99,139,56,ES_MULTILINE | ES_READONLY
     PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,7,162,69,14
     LTEXT           "Audio resources are short wav-based resources used for sound effects.",IDC_STATICTITLE,7,7,139,22
-    PUSHBUTTON      "n",IDC_BUTTON_RECORD,95,180,19,14
+    PUSHBUTTON      "Record",IDC_BUTTON_RECORD,95,180,19,14,BS_ICON
     COMBOBOX        IDC_COMBO_WAVEFORMAT,7,181,83,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,79,162,35,14
 END
