--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -2088,5 +2088,11 @@
     <Image Include="res\bitmapob.bmp">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="res\record.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="res\headphones.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
