--- a/SCICompanionLib/SCICompanionLib.vcxproj.filters
+++ b/SCICompanionLib/SCICompanionLib.vcxproj.filters
@@ -729,6 +729,15 @@
     <ClCompile Include="Src\FrameComponents\LevelMeter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Src\Resources\AudioResourceSource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Resources\PatchResourceSource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\Resources\AudioCacheResourceSource.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SCICompanionLib.h">
@@ -1545,6 +1554,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Src\FrameComponents\LevelMeter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Resources\AudioResourceSource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Resources\PatchResourceSource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\Resources\AudioCacheResourceSource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
