- more fixes for audio cache stuff - support for trimming ends of audio - fix perf bug caused by level monitor

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -832,13 +832,13 @@ BEGIN
     EDITTEXT        IDC_EDITPACKAGE,74,8,68,14,ES_AUTOHSCROLL | ES_NUMBER
 END
 
-IDD_PREFERENCES DIALOGEX 0, 0, 355, 142
+IDD_PREFERENCES DIALOGEX 0, 0, 405, 143
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Preferences"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Ok",IDOK,238,121,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,298,121,50,14
+    DEFPUSHBUTTON   "Ok",IDOK,291,122,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,348,122,50,14
     CONTROL         "Use box for fake ego",IDC_CHECKUSEBOXEGO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,9,83,10
     EDITTEXT        IDC_FAKEEGOX,97,6,22,14,ES_AUTOHSCROLL | ES_NUMBER
     LTEXT           "x",IDC_STATIC,126,10,8,8,SS_CENTERIMAGE
@@ -851,17 +851,21 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,64,137,10
     CONTROL         "Views: dupe new cels",IDC_CHECKDUPENEWCELS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,78,97,10
     CONTROL         "Draw pic polygons as dotted",IDC_CHECKSCI01,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,92,118,10
-    CONTROL         "Enable browse info",IDC_BROWSEINFO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,175,21,101,10
-    CONTROL         "Auto code completion",IDC_CODECOMPLETION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,189,34,97,10
-    CONTROL         "Script navigation",IDC_SCRIPTNAV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,189,46,89,10
-    CONTROL         "Hover tips",IDC_HOVERTIPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,189,59,92,10
-    GROUPBOX        "Script editor",IDC_GROUP1,164,7,184,72
+    CONTROL         "Enable browse info",IDC_BROWSEINFO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,165,21,101,10
+    CONTROL         "Auto code completion",IDC_CODECOMPLETION,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,179,34,89,10
+    CONTROL         "Script navigation",IDC_SCRIPTNAV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,179,46,89,10
+    CONTROL         "Hover tips",IDC_HOVERTIPS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,179,59,88,10
+    GROUPBOX        "Script editor",IDC_GROUP1,158,7,114,72
     CONTROL         "Play sound when compile fails",IDC_COMPILEERRORSOUND,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,106,116,10
-    COMBOBOX        IDC_COMBO_MIDIDEVICE,215,87,133,150,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Midi device:",IDC_STATIC1,145,89,55,8,0,WS_EX_RIGHT
+    COMBOBOX        IDC_COMBO_MIDIDEVICE,287,87,111,150,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Midi device:",IDC_STATIC1,218,89,55,8,0,WS_EX_RIGHT
     CONTROL         "Use original SCI aspect ratio",IDC_CHECK_ASPECTRATIO,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,9,120,106,10
+    LTEXT           "Start/end recording trim (ms):",IDC_STATIC2,288,21,102,8
+    EDITTEXT        IDC_EDIT_TRIMLEFT,293,35,40,14,ES_AUTOHSCROLL | ES_NUMBER
+    EDITTEXT        IDC_EDIT_TRIMRIGHT,343,35,40,14,ES_AUTOHSCROLL | ES_NUMBER
+    GROUPBOX        "Static",IDC_GROUP2,279,7,119,50
 END
 
 IDD_VPC DIALOGEX 0, 0, 182, 20
@@ -1966,11 +1970,11 @@ BEGIN
     IDD_PREFERENCES, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 348
+        RIGHTMARGIN, 398
         VERTGUIDE, 61
         VERTGUIDE, 97
         TOPMARGIN, 7
-        BOTTOMMARGIN, 135
+        BOTTOMMARGIN, 136
     END
 
     IDD_VPC, DIALOG
