change "textless" to "use text " in the UI

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1690,7 +1690,7 @@ BEGIN
     LTEXT           "Static",IDC_STATIC_BASE36NAME,322,10,55,8
     RTEXT           "Recording format:",IDC_STATIC_REC,427,11,59,8
     PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,384,90,44,14
-    CONTROL         "Textless",IDC_CHECK_TEXTLESS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,321,41,55,10
+    CONTROL         "Use Text",IDC_CHECK_USETEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,321,41,55,10
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
@@ -1846,7 +1846,7 @@ BEGIN
     PUSHBUTTON      "Delete",IDC_BUTTON_DELETE_SYNC,192,131,18,14,BS_ICON
     EDITTEXT        IDC_EDIT_SAMPLEBIT,15,152,111,14,ES_AUTOHSCROLL | ES_READONLY
     PUSHBUTTON      "Generate Lip-sync Data",ID_GENERATELIPSYNC,15,170,53,23,BS_MULTILINE
-    CONTROL         "Textless",IDC_CHECK_TEXTLESS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,73,178,52,10
+    CONTROL         "Use Text",IDC_CHECK_USETEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,73,178,52,10
     CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,16,197,112,14
     LTEXT           "Word guesses:",IDC_STATIC_WORDS,19,215,49,8
     EDITTEXT        IDC_EDIT_WORDS,15,227,115,22,ES_MULTILINE | ES_AUTOVSCROLL | ES_READONLY
