- measure audio size - support deleting audio from message items

--- a/SCICompanionLib/SCICompanionLib.rc
+++ b/SCICompanionLib/SCICompanionLib.rc
@@ -1676,7 +1676,7 @@ BEGIN
     CONTROL         "",IDC_SLIDER,"msctls_trackbar32",WS_TABSTOP,442,48,50,15
     CONTROL         "Auto preview",IDC_CHECK_AUTOPREV,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,384,49,54,10
     LTEXT           "Duration:",IDC_STATIC_DURATION,386,63,106,8
-    PUSHBUTTON      "&Browse for .wav",IDC_BUTTONBROWSE,431,90,61,14
+    PUSHBUTTON      "&Browse",IDC_BUTTONBROWSE,431,90,38,14
     PUSHBUTTON      "Record",IDC_BUTTON_RECORD,403,24,19,14,BS_ICON
     COMBOBOX        IDC_COMBO_WAVEFORMAT,426,25,66,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Quick Lip Sync",IDC_BUTTONLIPSYNC,321,24,55,14
@@ -1686,6 +1686,7 @@ BEGIN
     RTEXT           "Recording format:",IDC_STATIC_REC,427,11,59,8
     PUSHBUTTON      "&Export",IDC_BUTTON_EXPORT,384,90,44,14
     CONTROL         "Use Text",IDC_CHECK_USETEXT,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,321,41,55,10
+    PUSHBUTTON      "Delete",IDC_BUTTONDELETEAUDIO,474,90,18,14,BS_ICON
 END
 
 IDD_DIALOGGRADIENTS DIALOGEX 0, 0, 117, 108
